Fixed alignment issue for email signup

--- a/source/stylesheets/landing.css.scss
+++ b/source/stylesheets/landing.css.scss
@@ -620,23 +620,19 @@ body {
 
 #mc_embed_signup {
     background: rgba(0, 0, 0, 0);
-    clear: left;
     color: #000;
+    text-align: center;
 }
 
 #mce-EMAIL {
-    font: 14px Helvetica, Arial, sans-serif;
-    font: 1.09vw Helvetica, Arial, sans-serif;
     text-align: center;
     border: 1px;
     padding-top: 6px;
     padding-top: .47vw;
     padding-bottom: 6px;
     padding-bottom: .47vw;
-    padding-left: 12px;
-    padding-left: .94vw;
-    padding-right: 12px;
-    padding-right: .94vw;
+    margin-left: 35%;
+    width: 20%;
     border-radius: 4px;
     border-radius: .31vw;
     -moz-border-radius: 4px;
@@ -645,9 +641,9 @@ body {
     -webkit-border-radius: .31vw;
     color: transparent;
     text-shadow: 0 0 0 #171717;
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
+    -webkit-transition: all .8s ease;
+    -moz-transition: all .8s ease;
+    transition: all .8s ease;
     &:hover, &:focus {
         box-shadow: 0 0 0.5em 0.5em rgba(255, 255, 255, 0.5);
     }
